part3/ex-3.02/manifests/app/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: milai0/pingpong-app:11.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
