part3/ex-3.02/manifests/app/logoutput-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
  namespace: applications
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
