part3/ex-3.02/manifests/app/pingpong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: applications
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - name: http
      protocol: TCP
      port: 2346
      targetPort: 3001
